# HPC-Contest-Merge-Sort-MPI

./: .gitignore  CMakeLists.txt  README.md  data.txt
data/: 2_16  2_18  2_19  big_giovanni_rnd  giga_giovanni_rnd  little_giovanni_rnd  t_giovanni_rnd
include/: datatype.h  mergeMPI.h  mergesort_serial.h  utils.h
measures/: measure1.xlsx
measures/Case_1/version_0/size_16/: mpi_16_16.csv  mpi_2_16.csv  mpi_4_16.csv  mpi_8_16.csv  serial_16.csv  size_16_table_elapsed.csv  size_16_table_elapsed.txt  size_16_table_merge_time+read_time.csv  size_16_table_merge_time+read_time.txt  size_16_table_merge_time.csv  size_16_table_merge_time.txt  table_case1_version0_size_16_merge_time.txt
measures/Case_1/version_0/size_18/: mpi_16_18.csv  mpi_2_18.csv  mpi_4_18.csv  mpi_8_18.csv  serial_18.csv  size_18_table_elapsed.csv  size_18_table_elapsed.txt  size_18_table_merge_time+read_time.csv  size_18_table_merge_time+read_time.txt  size_18_table_merge_time.csv  size_18_table_merge_time.txt  table_case1_version0_size_18_elapsed.csv  table_case1_version0_size_18_elapsed.txt
measures/Case_1/version_0/size_19/: mpi_16_19.csv  mpi_2_19.csv  mpi_4_19.csv  mpi_8_19.csv  serial_19.csv  size_19_table_elapsed.csv  size_19_table_elapsed.txt  size_19_table_merge_time+read_time.csv  size_19_table_merge_time+read_time.txt  size_19_table_merge_time.csv  size_19_table_merge_time.txt  table_case1_version0_size_19_elapsed.txt  table_case1_version0_size_19_merge_time.csv
measures/Case_1/version_0/size_20/: mpi_16_20.csv  mpi_2_20.csv  mpi_4_20.csv  mpi_8_20.csv  serial_20.csv  size_20_table_elapsed.csv  size_20_table_elapsed.txt  size_20_table_merge_time+read_time.csv  size_20_table_merge_time+read_time.txt  size_20_table_merge_time.csv  size_20_table_merge_time.txt
measures/Case_1/version_0/size_22/: mpi_2_22.csv  mpi_4_22.csv  mpi_8_22.csv  serial_22.csv
measures/Case_1/version_0/size_24/: mpi_2_24.csv  mpi_4_24.csv  mpi_8_24.csv  serial_24.csv  table_case1_version0_size_24_elapsed.csv  table_case1_version0_size_24_elapsed.txt  table_case1_version0_size_24_merge_time.csv
measures/Case_1/version_0/size_26/: mpi_16_26.csv  mpi_2_26.csv  mpi_4_26.csv  table_case1_version0_size_26_elapsed.csv  table_case1_version0_size_26_merge_time.csv  table_case1_version0_size_26_merge_time.txt
measures/Case_1/version_1/size_16/: mpi_16_16.csv  mpi_2_16.csv  mpi_4_16.csv  mpi_8_16.csv  serial_16.csv  size_16_table_elapsed.csv  size_16_table_elapsed.txt  size_16_table_merge_time+read_time.csv  size_16_table_merge_time+read_time.txt  size_16_table_merge_time.csv  size_16_table_merge_time.txt  table_case1_version1_size_16_elapsed.csv  table_case1_version1_size_16_elapsed.txt  table_case1_version1_size_16_merge_time.csv
measures/Case_1/version_1/size_18/: mpi_16_18.csv  mpi_2_18.csv  mpi_4_18.csv  mpi_8_18.csv  serial_18.csv  size_18_table_elapsed.csv  size_18_table_elapsed.txt  size_18_table_merge_time+read_time.csv  size_18_table_merge_time+read_time.txt  size_18_table_merge_time.csv  size_18_table_merge_time.txt  table_case1_version1_size_18_merge_time.csv
measures/Case_1/version_1/size_19/: mpi_16_19.csv  mpi_2_19.csv  mpi_4_19.csv  mpi_8_19.csv  serial_19.csv  size_19_table_elapsed.csv  size_19_table_elapsed.txt  size_19_table_merge_time+read_time.csv  size_19_table_merge_time+read_time.txt  size_19_table_merge_time.csv  size_19_table_merge_time.txt  table_case1_version1_size_19_elapsed.csv  table_case1_version1_size_19_merge_time.txt
measures/Case_1/version_1/size_20/: mpi_16_20.csv  mpi_2_20.csv  mpi_4_20.csv  mpi_8_20.csv  serial_20.csv  size_20_table_elapsed.csv  size_20_table_elapsed.txt  size_20_table_merge_time+read_time.csv  size_20_table_merge_time+read_time.txt  size_20_table_merge_time.csv  size_20_table_merge_time.txt  table_case1_version1_size_20_elapsed.txt
measures/Case_1/version_1/size_22/: mpi_2_22.csv  mpi_4_22.csv  serial_22.csv  table_case1_version1_size_22_elapsed.csv  table_case1_version1_size_22_merge_time.csv  table_case1_version1_size_22_merge_time.txt
measures/Case_1/version_1/size_24/: mpi_2_24.csv  table_case1_version1_size_24_elapsed.csv  table_case1_version1_size_24_merge_time.csv  table_case1_version1_size_24_merge_time.txt
measures/Case_1/version_1/size_26/: mpi_16_26.csv  mpi_4_26.csv  mpi_8_26.csv  serial_26.csv  table_case1_version1_size_26_elapsed.csv  table_case1_version1_size_26_merge_time.csv
measures/Case_1/version_2/size_16/: mpi_16_16.csv  mpi_2_16.csv  mpi_4_16.csv  mpi_8_16.csv  serial_16.csv  size_16_table_elapsed.csv  size_16_table_elapsed.txt  size_16_table_merge_time+read_time.csv  size_16_table_merge_time+read_time.txt  size_16_table_merge_time.csv  size_16_table_merge_time.txt  table_case1_version2_size_16_elapsed.csv  table_case1_version2_size_16_merge_time.csv  table_case1_version2_size_16_merge_time.txt
measures/Case_1/version_2/size_18/: mpi_16_18.csv  mpi_2_18.csv  mpi_4_18.csv  mpi_8_18.csv  serial_18.csv  size_18_table_elapsed.csv  size_18_table_elapsed.txt  size_18_table_merge_time+read_time.csv  size_18_table_merge_time+read_time.txt  size_18_table_merge_time.csv  size_18_table_merge_time.txt  table_case1_version2_size_18_elapsed.csv  table_case1_version2_size_18_elapsed.txt
measures/Case_1/version_2/size_19/: mpi_16_19.csv  mpi_2_19.csv  mpi_4_19.csv  mpi_8_19.csv  serial_19.csv  size_19_table_elapsed.csv  size_19_table_elapsed.txt  size_19_table_merge_time+read_time.csv  size_19_table_merge_time+read_time.txt  size_19_table_merge_time.csv  size_19_table_merge_time.txt  table_case1_version2_size_19_elapsed.txt
measures/Case_1/version_2/size_20/: mpi_16_20.csv  mpi_2_20.csv  mpi_4_20.csv  mpi_8_20.csv  serial_20.csv  size_20_table_elapsed.csv  size_20_table_elapsed.txt  size_20_table_merge_time+read_time.csv  size_20_table_merge_time+read_time.txt  size_20_table_merge_time.csv  size_20_table_merge_time.txt  table_case1_version2_size_20_elapsed.csv
scripts/: TestResult.py  extract_measures.py  generate_measures.py  inputDataGenerator.py  natural_sorting.py  requirements.txt
src/: main.c  merge  mergeMPI.c  mergesort_serial.c  utils.c
(+590 files in other folders)
